# serializer version: 1
# name: test_authentication_with_expected_parameters
  Authentication(authToken='hello', refreshToken='world')
# ---
# name: test_invoices_with_expected_parameters
  Invoices(previousPeriodInvoice=Invoices.Invoice(StartDate=datetime.datetime(2023, 3, 1, 0, 0), PeriodDescription='Maart 2023', TotalAmount=140.12), currentPeriodInvoice=Invoices.Invoice(StartDate=datetime.datetime(2023, 4, 1, 0, 0), PeriodDescription='April 2023', TotalAmount=80.34), upcomingPeriodInvoice=Invoices.Invoice(StartDate=datetime.datetime(2023, 5, 1, 0, 0), PeriodDescription='Mei 2023', TotalAmount=80.34))
# ---
# name: test_market_prices_pricedata_current_hour
  list([
    list([
      Price(
        date_from=FakeDatetime(2022, 11, 21, 0, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 1, 0, tzinfo=tzutc()),
        energy_tax_price=4.0,
        for_future=False,
        for_now=False,
        for_today=True,
        market_price=1.0,
        market_price_tax=2.0,
        market_price_with_tax=3.0,
        sourcing_markup_price=3.0,
        total=10.0,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 1, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 2, 0, tzinfo=tzutc()),
        energy_tax_price=4.111,
        for_future=False,
        for_now=False,
        for_today=True,
        market_price=1.111,
        market_price_tax=2.111,
        market_price_with_tax=3.222,
        sourcing_markup_price=3.111,
        total=10.444,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 2, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 3, 0, tzinfo=tzutc()),
        energy_tax_price=4.222,
        for_future=False,
        for_now=False,
        for_today=True,
        market_price=1.222,
        market_price_tax=2.222,
        market_price_with_tax=3.444,
        sourcing_markup_price=3.222,
        total=10.888,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 3, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 4, 0, tzinfo=tzutc()),
        energy_tax_price=4.333,
        for_future=False,
        for_now=False,
        for_today=True,
        market_price=1.333,
        market_price_tax=2.333,
        market_price_with_tax=3.666,
        sourcing_markup_price=3.333,
        total=11.332,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 4, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 5, 0, tzinfo=tzutc()),
        energy_tax_price=4.444,
        for_future=False,
        for_now=False,
        for_today=True,
        market_price=1.444,
        market_price_tax=2.444,
        market_price_with_tax=3.888,
        sourcing_markup_price=3.444,
        total=11.776,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 5, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 6, 0, tzinfo=tzutc()),
        energy_tax_price=4.555,
        for_future=False,
        for_now=False,
        for_today=True,
        market_price=1.555,
        market_price_tax=2.555,
        market_price_with_tax=4.11,
        sourcing_markup_price=3.555,
        total=12.22,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 6, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 7, 0, tzinfo=tzutc()),
        energy_tax_price=4.666,
        for_future=False,
        for_now=False,
        for_today=True,
        market_price=1.666,
        market_price_tax=2.666,
        market_price_with_tax=4.332,
        sourcing_markup_price=3.666,
        total=12.664,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 7, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 8, 0, tzinfo=tzutc()),
        energy_tax_price=4.777,
        for_future=False,
        for_now=False,
        for_today=True,
        market_price=1.777,
        market_price_tax=2.777,
        market_price_with_tax=4.554,
        sourcing_markup_price=3.777,
        total=13.108,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 8, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 9, 0, tzinfo=tzutc()),
        energy_tax_price=4.888,
        for_future=False,
        for_now=False,
        for_today=True,
        market_price=1.888,
        market_price_tax=2.888,
        market_price_with_tax=4.776,
        sourcing_markup_price=3.888,
        total=13.552,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 9, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 10, 0, tzinfo=tzutc()),
        energy_tax_price=4.999,
        for_future=False,
        for_now=False,
        for_today=True,
        market_price=1.999,
        market_price_tax=2.999,
        market_price_with_tax=4.998,
        sourcing_markup_price=3.999,
        total=13.996,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 10, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 11, 0, tzinfo=tzutc()),
        energy_tax_price=4.1,
        for_future=False,
        for_now=False,
        for_today=True,
        market_price=1.1,
        market_price_tax=2.1,
        market_price_with_tax=3.2,
        sourcing_markup_price=3.1,
        total=10.4,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 11, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 12, 0, tzinfo=tzutc()),
        energy_tax_price=4.11,
        for_future=False,
        for_now=False,
        for_today=True,
        market_price=1.11,
        market_price_tax=2.11,
        market_price_with_tax=3.22,
        sourcing_markup_price=3.11,
        total=10.44,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 12, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 13, 0, tzinfo=tzutc()),
        energy_tax_price=4.12,
        for_future=False,
        for_now=False,
        for_today=True,
        market_price=1.12,
        market_price_tax=2.12,
        market_price_with_tax=3.24,
        sourcing_markup_price=3.12,
        total=10.48,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 13, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 14, 0, tzinfo=tzutc()),
        energy_tax_price=4.13,
        for_future=False,
        for_now=False,
        for_today=True,
        market_price=1.13,
        market_price_tax=2.13,
        market_price_with_tax=3.26,
        sourcing_markup_price=3.13,
        total=10.52,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 14, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 15, 0, tzinfo=tzutc()),
        energy_tax_price=4.14,
        for_future=False,
        for_now=True,
        for_today=True,
        market_price=1.14,
        market_price_tax=2.14,
        market_price_with_tax=3.28,
        sourcing_markup_price=3.14,
        total=10.56,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 15, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 16, 0, tzinfo=tzutc()),
        energy_tax_price=4.15,
        for_future=True,
        for_now=False,
        for_today=True,
        market_price=1.15,
        market_price_tax=2.15,
        market_price_with_tax=3.3,
        sourcing_markup_price=3.15,
        total=10.6,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 16, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 17, 0, tzinfo=tzutc()),
        energy_tax_price=4.16,
        for_future=True,
        for_now=False,
        for_today=True,
        market_price=1.16,
        market_price_tax=2.16,
        market_price_with_tax=3.32,
        sourcing_markup_price=3.16,
        total=10.64,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 17, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 18, 0, tzinfo=tzutc()),
        energy_tax_price=4.17,
        for_future=True,
        for_now=False,
        for_today=True,
        market_price=1.17,
        market_price_tax=2.17,
        market_price_with_tax=3.34,
        sourcing_markup_price=3.17,
        total=10.68,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 18, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 19, 0, tzinfo=tzutc()),
        energy_tax_price=4.18,
        for_future=True,
        for_now=False,
        for_today=True,
        market_price=1.18,
        market_price_tax=2.18,
        market_price_with_tax=3.36,
        sourcing_markup_price=3.18,
        total=10.72,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 19, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 20, 0, tzinfo=tzutc()),
        energy_tax_price=4.19,
        for_future=True,
        for_now=False,
        for_today=True,
        market_price=1.19,
        market_price_tax=2.19,
        market_price_with_tax=3.38,
        sourcing_markup_price=3.19,
        total=10.76,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 20, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 21, 0, tzinfo=tzutc()),
        energy_tax_price=4.2,
        for_future=True,
        for_now=False,
        for_today=True,
        market_price=1.2,
        market_price_tax=2.2,
        market_price_with_tax=3.4,
        sourcing_markup_price=3.2,
        total=10.8,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 21, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 22, 0, tzinfo=tzutc()),
        energy_tax_price=4.21,
        for_future=True,
        for_now=False,
        for_today=True,
        market_price=1.21,
        market_price_tax=2.21,
        market_price_with_tax=3.42,
        sourcing_markup_price=3.21,
        total=10.84,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 22, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 23, 0, tzinfo=tzutc()),
        energy_tax_price=4.22,
        for_future=True,
        for_now=False,
        for_today=True,
        market_price=1.22,
        market_price_tax=2.22,
        market_price_with_tax=3.44,
        sourcing_markup_price=3.22,
        total=10.88,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 23, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 22, 0, 0, tzinfo=tzutc()),
        energy_tax_price=4.23,
        for_future=True,
        for_now=False,
        for_today=True,
        market_price=1.23,
        market_price_tax=2.23,
        market_price_with_tax=3.46,
        sourcing_markup_price=3.23,
        total=10.92,
      ),
    ]),
    list([
      Price(
        date_from=FakeDatetime(2022, 11, 21, 0, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 1, 0, tzinfo=tzutc()),
        energy_tax_price=4.0,
        for_future=False,
        for_now=False,
        for_today=True,
        market_price=1.0,
        market_price_tax=2.0,
        market_price_with_tax=3.0,
        sourcing_markup_price=3.0,
        total=10.0,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 1, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 2, 0, tzinfo=tzutc()),
        energy_tax_price=4.111,
        for_future=False,
        for_now=False,
        for_today=True,
        market_price=1.111,
        market_price_tax=2.111,
        market_price_with_tax=3.222,
        sourcing_markup_price=3.111,
        total=10.444,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 2, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 3, 0, tzinfo=tzutc()),
        energy_tax_price=4.222,
        for_future=False,
        for_now=False,
        for_today=True,
        market_price=1.222,
        market_price_tax=2.222,
        market_price_with_tax=3.444,
        sourcing_markup_price=3.222,
        total=10.888,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 3, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 4, 0, tzinfo=tzutc()),
        energy_tax_price=4.333,
        for_future=False,
        for_now=False,
        for_today=True,
        market_price=1.333,
        market_price_tax=2.333,
        market_price_with_tax=3.666,
        sourcing_markup_price=3.333,
        total=11.332,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 4, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 5, 0, tzinfo=tzutc()),
        energy_tax_price=4.444,
        for_future=False,
        for_now=False,
        for_today=True,
        market_price=1.444,
        market_price_tax=2.444,
        market_price_with_tax=3.888,
        sourcing_markup_price=3.444,
        total=11.776,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 5, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 6, 0, tzinfo=tzutc()),
        energy_tax_price=4.555,
        for_future=False,
        for_now=False,
        for_today=True,
        market_price=1.555,
        market_price_tax=2.555,
        market_price_with_tax=4.11,
        sourcing_markup_price=3.555,
        total=12.22,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 6, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 7, 0, tzinfo=tzutc()),
        energy_tax_price=4.666,
        for_future=False,
        for_now=False,
        for_today=True,
        market_price=1.666,
        market_price_tax=2.666,
        market_price_with_tax=4.332,
        sourcing_markup_price=3.666,
        total=12.664,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 7, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 8, 0, tzinfo=tzutc()),
        energy_tax_price=4.777,
        for_future=False,
        for_now=False,
        for_today=True,
        market_price=1.777,
        market_price_tax=2.777,
        market_price_with_tax=4.554,
        sourcing_markup_price=3.777,
        total=13.108,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 8, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 9, 0, tzinfo=tzutc()),
        energy_tax_price=4.888,
        for_future=False,
        for_now=False,
        for_today=True,
        market_price=1.888,
        market_price_tax=2.888,
        market_price_with_tax=4.776,
        sourcing_markup_price=3.888,
        total=13.552,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 9, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 10, 0, tzinfo=tzutc()),
        energy_tax_price=4.999,
        for_future=False,
        for_now=False,
        for_today=True,
        market_price=1.999,
        market_price_tax=2.999,
        market_price_with_tax=4.998,
        sourcing_markup_price=3.999,
        total=13.996,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 10, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 11, 0, tzinfo=tzutc()),
        energy_tax_price=4.1,
        for_future=False,
        for_now=False,
        for_today=True,
        market_price=1.1,
        market_price_tax=2.1,
        market_price_with_tax=3.2,
        sourcing_markup_price=3.1,
        total=10.4,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 11, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 12, 0, tzinfo=tzutc()),
        energy_tax_price=4.11,
        for_future=False,
        for_now=False,
        for_today=True,
        market_price=1.11,
        market_price_tax=2.11,
        market_price_with_tax=3.22,
        sourcing_markup_price=3.11,
        total=10.44,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 12, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 13, 0, tzinfo=tzutc()),
        energy_tax_price=4.12,
        for_future=False,
        for_now=False,
        for_today=True,
        market_price=1.12,
        market_price_tax=2.12,
        market_price_with_tax=3.24,
        sourcing_markup_price=3.12,
        total=10.48,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 13, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 14, 0, tzinfo=tzutc()),
        energy_tax_price=4.13,
        for_future=False,
        for_now=False,
        for_today=True,
        market_price=1.13,
        market_price_tax=2.13,
        market_price_with_tax=3.26,
        sourcing_markup_price=3.13,
        total=10.52,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 14, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 15, 0, tzinfo=tzutc()),
        energy_tax_price=4.14,
        for_future=False,
        for_now=True,
        for_today=True,
        market_price=1.14,
        market_price_tax=2.14,
        market_price_with_tax=3.28,
        sourcing_markup_price=3.14,
        total=10.56,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 15, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 16, 0, tzinfo=tzutc()),
        energy_tax_price=4.15,
        for_future=True,
        for_now=False,
        for_today=True,
        market_price=1.15,
        market_price_tax=2.15,
        market_price_with_tax=3.3,
        sourcing_markup_price=3.15,
        total=10.6,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 16, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 17, 0, tzinfo=tzutc()),
        energy_tax_price=4.16,
        for_future=True,
        for_now=False,
        for_today=True,
        market_price=1.16,
        market_price_tax=2.16,
        market_price_with_tax=3.32,
        sourcing_markup_price=3.16,
        total=10.64,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 17, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 18, 0, tzinfo=tzutc()),
        energy_tax_price=4.17,
        for_future=True,
        for_now=False,
        for_today=True,
        market_price=1.17,
        market_price_tax=2.17,
        market_price_with_tax=3.34,
        sourcing_markup_price=3.17,
        total=10.68,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 18, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 19, 0, tzinfo=tzutc()),
        energy_tax_price=4.18,
        for_future=True,
        for_now=False,
        for_today=True,
        market_price=1.18,
        market_price_tax=2.18,
        market_price_with_tax=3.36,
        sourcing_markup_price=3.18,
        total=10.72,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 19, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 20, 0, tzinfo=tzutc()),
        energy_tax_price=4.19,
        for_future=True,
        for_now=False,
        for_today=True,
        market_price=1.19,
        market_price_tax=2.19,
        market_price_with_tax=3.38,
        sourcing_markup_price=3.19,
        total=10.76,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 20, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 21, 0, tzinfo=tzutc()),
        energy_tax_price=4.2,
        for_future=True,
        for_now=False,
        for_today=True,
        market_price=1.2,
        market_price_tax=2.2,
        market_price_with_tax=3.4,
        sourcing_markup_price=3.2,
        total=10.8,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 21, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 22, 0, tzinfo=tzutc()),
        energy_tax_price=4.21,
        for_future=True,
        for_now=False,
        for_today=True,
        market_price=1.21,
        market_price_tax=2.21,
        market_price_with_tax=3.42,
        sourcing_markup_price=3.21,
        total=10.84,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 22, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 21, 23, 0, tzinfo=tzutc()),
        energy_tax_price=4.22,
        for_future=True,
        for_now=False,
        for_today=True,
        market_price=1.22,
        market_price_tax=2.22,
        market_price_with_tax=3.44,
        sourcing_markup_price=3.22,
        total=10.88,
      ),
      Price(
        date_from=FakeDatetime(2022, 11, 21, 23, 0, tzinfo=tzutc()),
        date_till=FakeDatetime(2022, 11, 22, 0, 0, tzinfo=tzutc()),
        energy_tax_price=4.23,
        for_future=True,
        for_now=False,
        for_today=True,
        market_price=1.23,
        market_price_tax=2.23,
        market_price_with_tax=3.46,
        sourcing_markup_price=3.23,
        total=10.92,
      ),
    ]),
  ])
# ---
# name: test_market_prices_pricedata_next_hour
  list([
    Price(
      date_from=FakeDatetime(2022, 11, 21, 15, 0, tzinfo=tzutc()),
      date_till=FakeDatetime(2022, 11, 21, 16, 0, tzinfo=tzutc()),
      energy_tax_price=4.15,
      for_future=True,
      for_now=False,
      for_today=True,
      market_price=1.15,
      market_price_tax=2.15,
      market_price_with_tax=3.3,
      sourcing_markup_price=3.15,
      total=10.6,
    ),
    Price(
      date_from=FakeDatetime(2022, 11, 21, 16, 0, tzinfo=tzutc()),
      date_till=FakeDatetime(2022, 11, 21, 17, 0, tzinfo=tzutc()),
      energy_tax_price=4.16,
      for_future=True,
      for_now=False,
      for_today=True,
      market_price=1.16,
      market_price_tax=2.16,
      market_price_with_tax=3.32,
      sourcing_markup_price=3.16,
      total=10.64,
    ),
    Price(
      date_from=FakeDatetime(2022, 11, 21, 17, 0, tzinfo=tzutc()),
      date_till=FakeDatetime(2022, 11, 21, 18, 0, tzinfo=tzutc()),
      energy_tax_price=4.17,
      for_future=True,
      for_now=False,
      for_today=True,
      market_price=1.17,
      market_price_tax=2.17,
      market_price_with_tax=3.34,
      sourcing_markup_price=3.17,
      total=10.68,
    ),
    Price(
      date_from=FakeDatetime(2022, 11, 21, 18, 0, tzinfo=tzutc()),
      date_till=FakeDatetime(2022, 11, 21, 19, 0, tzinfo=tzutc()),
      energy_tax_price=4.18,
      for_future=True,
      for_now=False,
      for_today=True,
      market_price=1.18,
      market_price_tax=2.18,
      market_price_with_tax=3.36,
      sourcing_markup_price=3.18,
      total=10.72,
    ),
    Price(
      date_from=FakeDatetime(2022, 11, 21, 19, 0, tzinfo=tzutc()),
      date_till=FakeDatetime(2022, 11, 21, 20, 0, tzinfo=tzutc()),
      energy_tax_price=4.19,
      for_future=True,
      for_now=False,
      for_today=True,
      market_price=1.19,
      market_price_tax=2.19,
      market_price_with_tax=3.38,
      sourcing_markup_price=3.19,
      total=10.76,
    ),
    Price(
      date_from=FakeDatetime(2022, 11, 21, 20, 0, tzinfo=tzutc()),
      date_till=FakeDatetime(2022, 11, 21, 21, 0, tzinfo=tzutc()),
      energy_tax_price=4.2,
      for_future=True,
      for_now=False,
      for_today=True,
      market_price=1.2,
      market_price_tax=2.2,
      market_price_with_tax=3.4,
      sourcing_markup_price=3.2,
      total=10.8,
    ),
    Price(
      date_from=FakeDatetime(2022, 11, 21, 21, 0, tzinfo=tzutc()),
      date_till=FakeDatetime(2022, 11, 21, 22, 0, tzinfo=tzutc()),
      energy_tax_price=4.21,
      for_future=True,
      for_now=False,
      for_today=True,
      market_price=1.21,
      market_price_tax=2.21,
      market_price_with_tax=3.42,
      sourcing_markup_price=3.21,
      total=10.84,
    ),
    Price(
      date_from=FakeDatetime(2022, 11, 21, 22, 0, tzinfo=tzutc()),
      date_till=FakeDatetime(2022, 11, 21, 23, 0, tzinfo=tzutc()),
      energy_tax_price=4.22,
      for_future=True,
      for_now=False,
      for_today=True,
      market_price=1.22,
      market_price_tax=2.22,
      market_price_with_tax=3.44,
      sourcing_markup_price=3.22,
      total=10.88,
    ),
    Price(
      date_from=FakeDatetime(2022, 11, 21, 23, 0, tzinfo=tzutc()),
      date_till=FakeDatetime(2022, 11, 22, 0, 0, tzinfo=tzutc()),
      energy_tax_price=4.23,
      for_future=True,
      for_now=False,
      for_today=True,
      market_price=1.23,
      market_price_tax=2.23,
      market_price_with_tax=3.46,
      sourcing_markup_price=3.23,
      total=10.92,
    ),
  ])
# ---
# name: test_market_prices_with_expected_parameters
  list([
    list([
      Price(
        date_from=datetime.datetime(2022, 11, 21, 0, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 1, 0, tzinfo=tzutc()),
        energy_tax_price=4.0,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.0,
        market_price_tax=2.0,
        market_price_with_tax=3.0,
        sourcing_markup_price=3.0,
        total=10.0,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 1, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 2, 0, tzinfo=tzutc()),
        energy_tax_price=4.111,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.111,
        market_price_tax=2.111,
        market_price_with_tax=3.222,
        sourcing_markup_price=3.111,
        total=10.444,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 2, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 3, 0, tzinfo=tzutc()),
        energy_tax_price=4.222,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.222,
        market_price_tax=2.222,
        market_price_with_tax=3.444,
        sourcing_markup_price=3.222,
        total=10.888,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 3, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 4, 0, tzinfo=tzutc()),
        energy_tax_price=4.333,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.333,
        market_price_tax=2.333,
        market_price_with_tax=3.666,
        sourcing_markup_price=3.333,
        total=11.332,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 4, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 5, 0, tzinfo=tzutc()),
        energy_tax_price=4.444,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.444,
        market_price_tax=2.444,
        market_price_with_tax=3.888,
        sourcing_markup_price=3.444,
        total=11.776,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 5, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 6, 0, tzinfo=tzutc()),
        energy_tax_price=4.555,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.555,
        market_price_tax=2.555,
        market_price_with_tax=4.11,
        sourcing_markup_price=3.555,
        total=12.22,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 6, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 7, 0, tzinfo=tzutc()),
        energy_tax_price=4.666,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.666,
        market_price_tax=2.666,
        market_price_with_tax=4.332,
        sourcing_markup_price=3.666,
        total=12.664,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 7, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 8, 0, tzinfo=tzutc()),
        energy_tax_price=4.777,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.777,
        market_price_tax=2.777,
        market_price_with_tax=4.554,
        sourcing_markup_price=3.777,
        total=13.108,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 8, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 9, 0, tzinfo=tzutc()),
        energy_tax_price=4.888,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.888,
        market_price_tax=2.888,
        market_price_with_tax=4.776,
        sourcing_markup_price=3.888,
        total=13.552,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 9, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 10, 0, tzinfo=tzutc()),
        energy_tax_price=4.999,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.999,
        market_price_tax=2.999,
        market_price_with_tax=4.998,
        sourcing_markup_price=3.999,
        total=13.996,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 10, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 11, 0, tzinfo=tzutc()),
        energy_tax_price=4.1,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.1,
        market_price_tax=2.1,
        market_price_with_tax=3.2,
        sourcing_markup_price=3.1,
        total=10.4,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 11, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 12, 0, tzinfo=tzutc()),
        energy_tax_price=4.11,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.11,
        market_price_tax=2.11,
        market_price_with_tax=3.22,
        sourcing_markup_price=3.11,
        total=10.44,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 12, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 13, 0, tzinfo=tzutc()),
        energy_tax_price=4.12,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.12,
        market_price_tax=2.12,
        market_price_with_tax=3.24,
        sourcing_markup_price=3.12,
        total=10.48,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 13, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 14, 0, tzinfo=tzutc()),
        energy_tax_price=4.13,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.13,
        market_price_tax=2.13,
        market_price_with_tax=3.26,
        sourcing_markup_price=3.13,
        total=10.52,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 14, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 15, 0, tzinfo=tzutc()),
        energy_tax_price=4.14,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.14,
        market_price_tax=2.14,
        market_price_with_tax=3.28,
        sourcing_markup_price=3.14,
        total=10.56,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 15, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 16, 0, tzinfo=tzutc()),
        energy_tax_price=4.15,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.15,
        market_price_tax=2.15,
        market_price_with_tax=3.3,
        sourcing_markup_price=3.15,
        total=10.6,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 16, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 17, 0, tzinfo=tzutc()),
        energy_tax_price=4.16,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.16,
        market_price_tax=2.16,
        market_price_with_tax=3.32,
        sourcing_markup_price=3.16,
        total=10.64,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 17, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 18, 0, tzinfo=tzutc()),
        energy_tax_price=4.17,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.17,
        market_price_tax=2.17,
        market_price_with_tax=3.34,
        sourcing_markup_price=3.17,
        total=10.68,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 18, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 19, 0, tzinfo=tzutc()),
        energy_tax_price=4.18,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.18,
        market_price_tax=2.18,
        market_price_with_tax=3.36,
        sourcing_markup_price=3.18,
        total=10.72,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 19, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 20, 0, tzinfo=tzutc()),
        energy_tax_price=4.19,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.19,
        market_price_tax=2.19,
        market_price_with_tax=3.38,
        sourcing_markup_price=3.19,
        total=10.76,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 20, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 21, 0, tzinfo=tzutc()),
        energy_tax_price=4.2,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.2,
        market_price_tax=2.2,
        market_price_with_tax=3.4,
        sourcing_markup_price=3.2,
        total=10.8,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 21, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 22, 0, tzinfo=tzutc()),
        energy_tax_price=4.21,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.21,
        market_price_tax=2.21,
        market_price_with_tax=3.42,
        sourcing_markup_price=3.21,
        total=10.84,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 22, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 23, 0, tzinfo=tzutc()),
        energy_tax_price=4.22,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.22,
        market_price_tax=2.22,
        market_price_with_tax=3.44,
        sourcing_markup_price=3.22,
        total=10.88,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 23, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 22, 0, 0, tzinfo=tzutc()),
        energy_tax_price=4.23,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.23,
        market_price_tax=2.23,
        market_price_with_tax=3.46,
        sourcing_markup_price=3.23,
        total=10.92,
      ),
    ]),
    list([
      Price(
        date_from=datetime.datetime(2022, 11, 21, 0, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 1, 0, tzinfo=tzutc()),
        energy_tax_price=4.0,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.0,
        market_price_tax=2.0,
        market_price_with_tax=3.0,
        sourcing_markup_price=3.0,
        total=10.0,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 1, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 2, 0, tzinfo=tzutc()),
        energy_tax_price=4.111,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.111,
        market_price_tax=2.111,
        market_price_with_tax=3.222,
        sourcing_markup_price=3.111,
        total=10.444,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 2, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 3, 0, tzinfo=tzutc()),
        energy_tax_price=4.222,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.222,
        market_price_tax=2.222,
        market_price_with_tax=3.444,
        sourcing_markup_price=3.222,
        total=10.888,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 3, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 4, 0, tzinfo=tzutc()),
        energy_tax_price=4.333,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.333,
        market_price_tax=2.333,
        market_price_with_tax=3.666,
        sourcing_markup_price=3.333,
        total=11.332,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 4, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 5, 0, tzinfo=tzutc()),
        energy_tax_price=4.444,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.444,
        market_price_tax=2.444,
        market_price_with_tax=3.888,
        sourcing_markup_price=3.444,
        total=11.776,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 5, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 6, 0, tzinfo=tzutc()),
        energy_tax_price=4.555,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.555,
        market_price_tax=2.555,
        market_price_with_tax=4.11,
        sourcing_markup_price=3.555,
        total=12.22,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 6, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 7, 0, tzinfo=tzutc()),
        energy_tax_price=4.666,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.666,
        market_price_tax=2.666,
        market_price_with_tax=4.332,
        sourcing_markup_price=3.666,
        total=12.664,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 7, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 8, 0, tzinfo=tzutc()),
        energy_tax_price=4.777,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.777,
        market_price_tax=2.777,
        market_price_with_tax=4.554,
        sourcing_markup_price=3.777,
        total=13.108,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 8, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 9, 0, tzinfo=tzutc()),
        energy_tax_price=4.888,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.888,
        market_price_tax=2.888,
        market_price_with_tax=4.776,
        sourcing_markup_price=3.888,
        total=13.552,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 9, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 10, 0, tzinfo=tzutc()),
        energy_tax_price=4.999,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.999,
        market_price_tax=2.999,
        market_price_with_tax=4.998,
        sourcing_markup_price=3.999,
        total=13.996,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 10, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 11, 0, tzinfo=tzutc()),
        energy_tax_price=4.1,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.1,
        market_price_tax=2.1,
        market_price_with_tax=3.2,
        sourcing_markup_price=3.1,
        total=10.4,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 11, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 12, 0, tzinfo=tzutc()),
        energy_tax_price=4.11,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.11,
        market_price_tax=2.11,
        market_price_with_tax=3.22,
        sourcing_markup_price=3.11,
        total=10.44,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 12, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 13, 0, tzinfo=tzutc()),
        energy_tax_price=4.12,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.12,
        market_price_tax=2.12,
        market_price_with_tax=3.24,
        sourcing_markup_price=3.12,
        total=10.48,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 13, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 14, 0, tzinfo=tzutc()),
        energy_tax_price=4.13,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.13,
        market_price_tax=2.13,
        market_price_with_tax=3.26,
        sourcing_markup_price=3.13,
        total=10.52,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 14, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 15, 0, tzinfo=tzutc()),
        energy_tax_price=4.14,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.14,
        market_price_tax=2.14,
        market_price_with_tax=3.28,
        sourcing_markup_price=3.14,
        total=10.56,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 15, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 16, 0, tzinfo=tzutc()),
        energy_tax_price=4.15,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.15,
        market_price_tax=2.15,
        market_price_with_tax=3.3,
        sourcing_markup_price=3.15,
        total=10.6,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 16, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 17, 0, tzinfo=tzutc()),
        energy_tax_price=4.16,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.16,
        market_price_tax=2.16,
        market_price_with_tax=3.32,
        sourcing_markup_price=3.16,
        total=10.64,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 17, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 18, 0, tzinfo=tzutc()),
        energy_tax_price=4.17,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.17,
        market_price_tax=2.17,
        market_price_with_tax=3.34,
        sourcing_markup_price=3.17,
        total=10.68,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 18, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 19, 0, tzinfo=tzutc()),
        energy_tax_price=4.18,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.18,
        market_price_tax=2.18,
        market_price_with_tax=3.36,
        sourcing_markup_price=3.18,
        total=10.72,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 19, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 20, 0, tzinfo=tzutc()),
        energy_tax_price=4.19,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.19,
        market_price_tax=2.19,
        market_price_with_tax=3.38,
        sourcing_markup_price=3.19,
        total=10.76,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 20, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 21, 0, tzinfo=tzutc()),
        energy_tax_price=4.2,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.2,
        market_price_tax=2.2,
        market_price_with_tax=3.4,
        sourcing_markup_price=3.2,
        total=10.8,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 21, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 22, 0, tzinfo=tzutc()),
        energy_tax_price=4.21,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.21,
        market_price_tax=2.21,
        market_price_with_tax=3.42,
        sourcing_markup_price=3.21,
        total=10.84,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 22, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 23, 0, tzinfo=tzutc()),
        energy_tax_price=4.22,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.22,
        market_price_tax=2.22,
        market_price_with_tax=3.44,
        sourcing_markup_price=3.22,
        total=10.88,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 23, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 22, 0, 0, tzinfo=tzutc()),
        energy_tax_price=4.23,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.23,
        market_price_tax=2.23,
        market_price_with_tax=3.46,
        sourcing_markup_price=3.23,
        total=10.92,
      ),
    ]),
  ])
# ---
# name: test_month_summary_with_expected_parameters
  MonthSummary(actualCostsUntilLastMeterReadingDate=12.34, expectedCostsUntilLastMeterReadingDate=20.0, expectedCosts=50.0, lastMeterReadingDate='2023-01-01')
# ---
# name: test_user_with_expected_parameters
  User(id='my_id', connectionsStatus='READY', firstMeterReadingDate='2022-11-20', lastMeterReadingDate='2022-12-05', advancedPaymentAmount=99.0, hasCO2Compensation=False)
# ---
